--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="website">Website</string>
     <string name="adresse">Adresse</string>
     <string name="a_propos_de_moi">A propos de moi</string>
-    <string name="add_neighbors">Add neighbors</string>
+    <string name="add_neighbors">Ajouter un voisin</string>
     <string name="enregistrer">enregistrer</string>
     <string name="save">Enregistrer</string>
     <string name="hint_about">A propos de moi</string>
